Migrated to Java 17, Spring boot 3.5.5, Gradle 8.13